# py-icepacker

./: README.md  pyproject.toml  setup.py
icepack/: __init__.py  icepack.py
icepacker/: __init__.py  icepacker.py
tests/: test_icepack.py
unice68/: Makefile  unice68.h  unice68_pack.c  unice68_unpack.c
