# @file     pyproject.toml
# @author   Ben G. Han
# @date     2025-09-03
# @brief    python project configuration file used by packaging tools.

[build-system]
requires = ["setuptools>=61.0", "wheel"] #, "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "icepack"
#dynamic = ["version"]
version = "0.1.0"
description = "Python Interface for unice68 ice packer/depacker library"
readme = "README.md"
authors = [{name = "Ben G. Han"}]
license = "LGPL-3.0-only"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
]

[project.urls]
Homepage = "https://github.com/benjihan/py-icepack"
Repository = "https://github.com/benjihan/py-icepack.git"
Issues = "https://github.com/benjihan/py-icepack/issues"
#Documentation = "https://readthedocs.org"
#Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
