# @file     pyproject.toml
# @author   Ben G. Han
# @date     2025-09-03
# @brief    python project configuration file used by packaging tools.


[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8", "wheel" ] # setuptools_dso
build-backend = "setuptools.build_meta"

[project]
name = "icepacker"
dynamic = ["version"]
description = "Python Interface for unice68 ice packer/depacker library"
readme = "README.md"
authors = [{name = "Ben G. Han"}]
license = "LGPL-3.0-only"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving :: Compression"
]

[project.urls]
Homepage = "https://github.com/benjihan/py-icepacker"
Repository = "https://github.com/benjihan/py-icepacker.git"
Issues = "https://github.com/benjihan/py-icepacker/issues"


[tool.setuptools]
#include-package-data = false
packages = ["icepacker", "icepacker.lib"]

[tool.setuptools.package-data]
"icepacker.lib" = ["*unice68*"]

[tool.setuptools_scm]
